# snnpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  add.metal  amx2.py  build_metal_lib.sh  mylibrary.air  train_groundtruth.txt
app/: main.cpp
cmake/: CodeCoverage.cmake
include/: learning.hpp  metal_adder.hpp  network.hpp  neuron.hpp  params.hpp  receptive_field.hpp  spike_train.hpp  sse2neon.h  threshold.hpp  utils.hpp
src/: learning.cpp  metal_adder.cpp  network.cpp  neuron.cpp  receptive_field.cpp  spike_train.cpp  threshold.cpp  utils.cpp
tests/: CMakeLists.txt  learning.cpp  network.cpp  neuron.cpp  receptive_field.cpp  spike_train.cpp  utils.cpp
